<resources>
    <string name="app_name">CountryProfile</string>
    <string name="Afghanistan">Afghanistan</string>
    <string name="Bangladesh">Bangladesh</string>
    <string name="Bhutan">Bhutan</string>
    <string name="India">India</string>
    <string name="Maldives">Maldives</string>
    <string name="Nepal">Nepal</string>
    <string name="Pakistan">Pakistan</string>
    <string name="Sri_Lanka">Sri Lanka</string>

    <string name="bd_txt">
       Bangladesh, to the east of India on the Bay of Bengal,
        is a South Asian country marked by lush greenery and many waterways.
        Its Padma (Ganges), Meghna and Jamuna rivers create fertile plains,
        and travel by boat is common. On the southern coast, the Sundarbans,
        an enormous mangrove forest shared with Eastern India,
        is home to the royal Bengal tiger.
    </string>

    <string name="in_txt">
       India, officially the Republic of India (Hindi: Bhārat Gaṇarājya),
        [23] is a country in South Asia. It is the seventh-largest country by area,
        the second-most populous country, and the most populous democracy in the world.
        Bounded by the Indian Ocean on the south, the Arabian Sea on the southwest,
        and the Bay of Bengal on the southeast, it shares land borders
        with Pakistan to the west;[f] China, Nepal, and Bhutan to the north;
        and Bangladesh and Myanmar to the east.
    </string>

    <string name="pk_txt">
       Bangladesh, to the east of India on the Bay of Bengal,
        is a South Asian country marked by lush greenery and many waterways.
        Its Padma (Ganges), Meghna and Jamuna rivers create fertile plains,
        and travel by boat is common. On the southern coast, the Sundarbans,
        an enormous mangrove forest shared with Eastern India,
        is home to the royal Bengal tiger.
    </string>

    <string name="sr_txt">
       Bangladesh, to the east of India on the Bay of Bengal,
        is a South Asian country marked by lush greenery and many waterways.
        Its Padma (Ganges), Meghna and Jamuna rivers create fertile plains,
        and travel by boat is common. On the southern coast, the Sundarbans,
        an enormous mangrove forest shared with Eastern India,
        is home to the royal Bengal tiger.
    </string>

    <string name="ne_txt">
       Bangladesh, to the east of India on the Bay of Bengal,
        is a South Asian country marked by lush greenery and many waterways.
        Its Padma (Ganges), Meghna and Jamuna rivers create fertile plains,
        and travel by boat is common. On the southern coast, the Sundarbans,
        an enormous mangrove forest shared with Eastern India,
        is home to the royal Bengal tiger.
    </string>

    <string name="bu_txt">
       Bangladesh, to the east of India on the Bay of Bengal,
        is a South Asian country marked by lush greenery and many waterways.
        Its Padma (Ganges), Meghna and Jamuna rivers create fertile plains,
        and travel by boat is common. On the southern coast, the Sundarbans,
        an enormous mangrove forest shared with Eastern India,
        is home to the royal Bengal tiger.
    </string>

    <string name="mal_txt">
       Bangladesh, to the east of India on the Bay of Bengal,
        is a South Asian country marked by lush greenery and many waterways.
        Its Padma (Ganges), Meghna and Jamuna rivers create fertile plains,
        and travel by boat is common. On the southern coast, the Sundarbans,
        an enormous mangrove forest shared with Eastern India,
        is home to the royal Bengal tiger.
    </string>

    <string name="af_txt">
       Bangladesh, to the east of India on the Bay of Bengal,
        is a South Asian country marked by lush greenery and many waterways.
        Its Padma (Ganges), Meghna and Jamuna rivers create fertile plains,
        and travel by boat is common. On the southern coast, the Sundarbans,
        an enormous mangrove forest shared with Eastern India,
        is home to the royal Bengal tiger.
    </string>

</resources>